syntax="proto2";
package IM.User.Msg;

message IMRegisterReq
{	
	required int32 id = 2;	//id,唯一编号
	required string name = 1;
	required string passwd = 3;
	required int32 type = 4; 	//学生或老师
}

message IMLoginReq
{
	required int32 id = 1;
	required string passwd = 2;
	required int32 type = 4;
}

message IMRspMsg
{
	required int32 ret = 1;
	//required string msg = 2;
	required bytes msg = 2;
}

message IMQuestionMsg
{
	required int32 num = 1;
	required bytes msg = 2;
}

message IMInsertMsg
{
	required int32 degree = 1; //难度洗漱
	required int32 type = 2; //试题类型
	required bytes msg = 3; //试题内容
}

